--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "license": "mit",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-redis": "^3.4.1",
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.5",
     "express-form-data": "^2.0.8",
     "express-formidable": "^1.2.0",
-    "express-session": "^1.16.1",
+    "express-session": "^1.16.2",
     "jade": "^1.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.5.12"
